Fixed uneven filter controls

--- a/src/app/dictionary/dictionary.component.css
+++ b/src/app/dictionary/dictionary.component.css
@@ -1,5 +1,5 @@
 .field {
-    display: inline-block;
+    float: left;
     margin: 5px;
     margin-left: 10px;
 }
